# advent_of_code_2019

./: meson.build
1/: main.c
2/: main.c
3/: first.txt  main.c  part2.c  second.txt
